Resolves: tdf#123575 treat Katakana middle dots as midletter

Treat
U+30FB KATAKANA MIDDLE DOT
U+FF65 HALFWIDTH KATAKANA MIDDLE DOT
like
U+00B7 MIDDLE DOT
and other U_WB_MIDLETTER.

Change-Id: Iea18e7582f29edf5d8c5bad047f97ed4088edf7c